--- a/templates/registro.html
+++ b/templates/registro.html
@@ -21,7 +21,8 @@
         {% endif %}
 
         <form method="POST">
-            <input type="text" name="nombre" placeholder="Nombre completo" required>
+            <input type="text" name="nombre" placeholder="Nombre y apellido" required>
+            <input type="tel" name="telefono" placeholder="Teléfono" required>
             <input type="email" name="email" placeholder="Correo electrónico" required>
             <div class="password-container">
                 <input type="password" name="password" id="password" placeholder="Contraseña" required>
